--- a/style.css
+++ b/style.css
@@ -5,15 +5,18 @@ header {
   text-align: center;
 border: solid;
   padding:auto;
+  height: auto;
 }
 
 h1{
   font-size: 550%;
 }
 /* section titles */
+
 h2 {
   text-align: center;
   font-family: Perpetua;
+  font-size: 50px;
 
   
 }
@@ -43,6 +46,8 @@ footer {
     text-align: center;
   border: solid;
   padding: 1%;
+  height: 15px
+  ;
 }
 
 /* class of paragraph text */
@@ -57,3 +62,4 @@ ul {margin-left: 1050px;
    font-size: 18px;}
 ol {margin-left: 1150px;
    font-size: 18px;}
+
